--- a/build.gradle
+++ b/build.gradle
@@ -26,10 +26,12 @@ ext {
                     bintray: false
             ],
             umeng :[
+                    name : "tps-umeng",
                     version: "0.0.3_9.3.7",//un
                     bintray: true
             ],
             start  : [
+                    name: "start",
                     version: "0.1.1",//un
                     bintray: false
             ]
@@ -46,12 +48,8 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-//        classpath 'com.novoda:bintray-release:0.9.2'
-//        classpath 'com.github.panpf.bintray-publish:bintray-publish:1.0.0'
-//        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
         classpath 'com.huawei.agconnect:agcp:1.4.2.300'
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
