--- a/kitx_tps_umeng/build.gradle
+++ b/kitx_tps_umeng/build.gradle
@@ -3,30 +3,9 @@ apply from: "../build.lib_kt.gradle"
 def umeng = rootProject.ext.kitx.umeng
 
 if (umeng.bintray) {
-
-    apply plugin : 'maven-publish'
-
-    group='com.github.ymex.kitx'
-    version = "0.0.3"
-
-
-    afterEvaluate {
-        publishing {
-            publications {
-                // Creates a Maven publication called "release".
-                release(MavenPublication) {
-                    from components.release
-                    groupId = 'com.github.ymex.kitx'
-                    artifactId = 'kitx-tps-umeng'
-                    version = '0.0.4'
-                }
-            }
-        }
-    }
-
-//    apply plugin: 'com.github.dcendents.android-maven'  //添加这两行
-//    group='com.github.ymex'
-//    version = "0.0.3"
+    apply plugin: 'com.github.dcendents.android-maven'
+    group='com.github.ymex'
+    version = "${umeng.version}"
 
 //    apply plugin: 'com.novoda.bintray-release'
 //    apply plugin: 'com.github.panpf.bintray-publish'
