--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,7 +70,7 @@ dependencies {
 
     api project(path: ':kitx_start')
 
-//    implementation 'com.github.ymex:kitx:v0.0.1'
+    implementation 'cn.ymex:kitx:tps.umeng-v0.0.3'
 
 
 }
