--- a/build.gradle
+++ b/build.gradle
@@ -26,9 +26,9 @@ ext {
                     bintray: false
             ],
             umeng :[
-                    name : "tps-umeng",
-                    version: "0.0.3_9.3.7",//un
-                    bintray: true
+                    name : "tps.umeng",
+                    version: "v0.0.3",
+                    bintray: false
             ],
             start  : [
                     name: "start",
